# log-pulse

./: .gitignore  README.md
.github/workflows/: ci.yml  dependabot.yml  docker-publish.yml  helm-publish.yml
app/: .dockerignore  Cargo.toml  Dockerfile
app/ingestor/: Cargo.toml  app.conf.template.yml  build.rs
app/ingestor-sdk-rust/: Cargo.toml
app/ingestor-sdk-rust/src/lib/: client.rs  layer.rs  lib.rs  message_visitor.rs
app/ingestor-sdk-rust/tests/: mock.rs  test.rs
app/ingestor/src/lib/: grpc.rs  lib.rs
app/ingestor/src/lib/app/: infra.rs  log_row.rs
app/ingestor/src/lib/config/: app.rs  clickhouse.rs  grpc.rs  mod.rs  redis.rs  secret.rs  worker.rs
app/ingestor/src/lib/domain/: mod.rs
app/ingestor/src/lib/domain/business/: worker.rs
app/ingestor/src/lib/domain/model/: log_row.rs
app/ingestor/src/lib/domain/repository/: log_row.rs
app/ingestor/src/lib/domain/service/: log_row.rs  mod.rs
app/ingestor/src/lib/infra_db_clickhouse/repository/: log_row.rs
app/ingestor/src/lib/infra_db_clickhouse/service/: clickhouse.rs  mod.rs
app/ingestor/src/lib/infra_db_redis/repository/: log_row.rs
app/ingestor/src/lib/infra_db_redis/service/: redis.rs
app/ingestor/src/lib/infra_inbound_grpc/model/: log_row.rs  mod.rs
app/ingestor/src/lib/infra_inbound_grpc/service/: grpc.rs  log_ingestor.rs  mod.rs
app/ingestor/src/proto/: log.proto
charts/log-pulse-ingestor/: .helmignore  Chart.yaml  values.yaml
charts/log-pulse-ingestor/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/log-pulse-ingestor/templates/tests/: test-connection.yaml
docker/: .env.template  docker-compose.yml
docker/clickhouse/scripts/: 1_create_database.sh  init-db.sql
scripts/grpc/: send_log_to_ingestor.sh  verify_health.sh
