[workspace]
resolver = "2"
members = ["ingestor"]

[workspace.dependencies]
anyhow = "1.0.100"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["std", "derive"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
