[workspace]
resolver = "2"
members = ["ingestor"]

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clickhouse = { version = "0.14.1", features = ["chrono"] }
config = { version = "0.15.19", features = ["yaml"] }
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["std", "derive"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
