[package]
name = "log-pulse-ingestor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "log-pulse-ingestor"
path = "src/bin/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clickhouse = { workspace = true }
config = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
